--- a/style.css
+++ b/style.css
@@ -383,7 +383,7 @@ body {
   #header2 {
     width: 100%;
     height: 75vh;
-    background: url("./images/FlyingCat.jpg") top center;
+    background: url("./rainbow.jpeg") top center;
     background-size: cover;
     padding: 0 15px;
   }
@@ -585,7 +585,7 @@ body {
   }
   
   .about .image {
-    background: url("./images/gemma.jpg") center center no-repeat;
+    background: url("./images/rainbow.jpeg") center center no-repeat;
     background-size: cover;
     min-height: 400px;
   }
@@ -612,7 +612,7 @@ body {
   /* #portfolio {
     width: 100%;
     height: 75vh;
-    background: url("./images/FlyingCat.jpg") top center;
+    background: url("./images/rainbow.jpeg") top center;
     background-size: cover;
     padding: 0 15px;
   } */
